# SPDX-FileCopyrightText: 2025 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

EXTRA_DIST = \
	bt_plugin_list_plugins.py \
	bt_plugin_params.py \
	bt_plugin_query.py \
	bt_plugin_test_cli_exit_status.py \
	convert-auto-src-comp-discovery-grouping.expect \
	test-output-ctf-metadata.expect \
	test_auto_src_comp_discovery_grouping.py \
	test_auto_src_comp_discovery_log_level.py \
	test_auto_src_comp_discovery_params.py \
	test_convert_args.py \
	test_exit_status.py \
	test_help.py \
	test_intersection.py \
	test_list_plugins.py \
	test_output_ctf_metadata.py \
	test_output_path_ctf_non_lttng_trace.py \
	test_packet_seq_num.py \
	test_params.py \
	test_query.py \
	test_trace_copy.py \
	test_trace_read.py \
	test_trimmer.py
