# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

AM_CPPFLAGS += -I$(top_srcdir)/tests/utils

noinst_LTLIBRARIES =

COMMON_TEST_LDADD = \
	$(top_builddir)/tests/utils/tap/libtap.la \
	$(top_builddir)/tests/utils/libtestcommon.la \
	utils/liblib-utils.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la \
	$(top_builddir)/src/cpp-common/vendor/fmt/libfmt.la

test_bt_values_SOURCES = test-bt-values.cpp
test_bt_values_LDADD = $(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

test_trace_ir_ref_SOURCES = test-trace-ir-ref.cpp
test_trace_ir_ref_LDADD = $(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(top_builddir)/src/ctf-writer/libbabeltrace2-ctf-writer.la

test_graph_topo_SOURCES = test-graph-topo.cpp
test_graph_topo_LDADD = $(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

test_simple_sink_SOURCES = test-simple-sink.cpp
test_simple_sink_LDADD = $(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

test_remove_destruction_listener_in_destruction_listener_SOURCES = \
	test-remove-destruction-listener-in-destruction-listener.cpp
test_remove_destruction_listener_in_destruction_listener_LDADD = \
	$(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

test_mip_SOURCES = test-mip.cpp
test_mip_LDADD = \
	$(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS = \
	test-bt-values \
	test-graph-topo \
	test-mip \
	test-remove-destruction-listener-in-destruction-listener \
	test-simple-sink \
	test-trace-ir-ref

noinst_PROGRAMS += test-fields
test_fields_SOURCES = test-fields.cpp
test_fields_LDADD = $(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_PROGRAMS += test-plugins
test_plugins_SOURCES = test-plugins.cpp
test_plugins_LDADD = \
	$(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la
test_plugins_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-DPLUGINS_DIR=\"$(abs_builddir)/plugins/.libs\"

noinst_LTLIBRARIES += plugins/plugin-minimal.la
plugins_plugin_minimal_la_SOURCES = \
	plugins/minimal.c
plugins_plugin_minimal_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	$(LT_NO_UNDEFINED) \
	-rpath / -avoid-version -module $(LD_NOTEXT)
plugins_plugin_minimal_la_LIBADD = \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la

noinst_LTLIBRARIES += plugins/plugin-sfs.la
plugins_plugin_sfs_la_SOURCES = plugins/sfs.c
plugins_plugin_sfs_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	$(LT_NO_UNDEFINED) \
	-rpath / -avoid-version -module $(LD_NOTEXT)
plugins_plugin_sfs_la_LIBADD = \
	$(top_builddir)/src/lib/libbabeltrace2.la \
	$(top_builddir)/src/common/libcommon.la \
	$(top_builddir)/src/logging/liblogging.la

noinst_PROGRAMS +=  test-plugin-init-fail
test_plugin_init_fail_SOURCES = test-plugin-init-fail.cpp
test_plugin_init_fail_LDADD = \
	$(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la
test_plugin_init_fail_CPPFLAGS = \
	$(AM_CPPFLAGS) \
	-DPLUGIN_DIR=\"$(abs_builddir)/init-fail-plugin/.libs\"

noinst_LTLIBRARIES += init-fail-plugin/plugin.la

init_fail_plugin_plugin_la_SOURCES = \
	init-fail-plugin/plugin.cpp
init_fail_plugin_plugin_la_LDFLAGS = \
	$(AM_LDFLAGS) \
	$(LT_NO_UNDEFINED) \
	-rpath / -avoid-version -module $(LD_NOTEXT)
init_fail_plugin_plugin_la_LIBADD = \
	$(top_builddir)/src/lib/libbabeltrace2.la

noinst_LTLIBRARIES += utils/liblib-utils.la
utils_liblib_utils_la_SOURCES = \
	utils/run-in.cpp \
	utils/run-in.hpp

# `conds/test-conds.sh` needs the developer mode to enable all
# condition checks.
if DEV_MODE

noinst_PROGRAMS += conds/conds-triggers

conds_conds_triggers_SOURCES = \
	conds/conds-triggers.cpp \
	conds/utils.cpp \
	conds/utils.hpp \
	conds/clk-cls-compat-postconds-triggers.cpp \
	conds/clk-cls-compat-postconds-triggers.hpp

conds_conds_triggers_LDADD = \
	$(COMMON_TEST_LDADD) \
	$(top_builddir)/src/lib/libbabeltrace2.la

endif # DEV_MODE

EXTRA_DIST = conds/conftest.py
