# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

EXTRA_DIST = \
	basic-timestamp-ordering.expect \
	diff-event-class-id.expect \
	diff-event-class-name.expect \
	diff-inactivity-msg-cs.expect \
	diff-stream-class-id.expect \
	diff-stream-class-name.expect \
	diff-stream-class-no-name.expect \
	diff-stream-id.expect \
	diff-stream-name.expect \
	diff-stream-no-name.expect \
	diff-trace-name.expect \
	multi-iter-ordering.expect \
	test_clock_compat.py \
	test_succeed_muxer.py
