# SPDX-FileCopyrightText: 2025 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

EXTRA_DIST = \
	default-compact-ctf1-mip0.expect \
	default-compact-ctf1-mip1.expect \
	default-compact-ctf2-mip1.expect \
	default-compact-without-metadata.expect \
	default-compact-without-time-ctf1-mip0.expect \
	default-compact-without-time-ctf1-mip1.expect \
	default-compact-without-time-ctf2-mip1.expect \
	default-ctf1-mip0.expect \
	default-ctf1-mip1.expect \
	default-ctf2-mip1.expect \
	default-without-data-ctf1-mip0.expect \
	default-without-data-ctf1-mip1.expect \
	default-without-data-ctf2-mip1.expect \
	default-without-data-without-metadata.expect \
	default-without-metadata-mip0.expect \
	default-without-metadata-mip1.expect \
	default-without-names-ctf1-mip0.expect \
	default-without-names-ctf1-mip1.expect \
	default-without-names-ctf2-mip1.expect \
	default-without-time-ctf1-mip0.expect \
	default-without-time-ctf1-mip1.expect \
	default-without-time-ctf2-mip1.expect \
	default-without-trace-name-ctf1-mip0.expect \
	default-without-trace-name-ctf1-mip1.expect \
	default-without-trace-name-ctf2-mip1.expect \
	default-without-uuid-ctf1-mip0.expect \
	default-without-uuid-ctf1-mip1.expect \
	default-without-uuid-ctf2-mip1.expect \
	no-packet-context.expect \
	test_succeed_details.py
