# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

SUBDIRS = succeed

dist_check_SCRIPTS = \
	field/test-field.sh

EXTRA_DIST = \
	test_deterministic_ordering.py \
	test_fail_src_ctf.py \
	test_query_metadata_info.py \
	test_query_support_info.py \
	test_query_trace_info.py
