# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

SUBDIRS = succeed

EXTRA_DIST = \
	field/conftest.py \
	field/ctf-1.8-pass-fixed-len-uint-32-be.mp \
	field/ctf-1.8-pass-fixed-len-uint-32-le.mp \
	field/ctf-1.8-pass-static-len-array-of-struct.mp \
	field/ctf-1.8-pass-struct-empty.mp \
	field/ctf-1.8-pass-struct.mp \
	field/ctf-1.8-pass-variant.mp \
	test_deterministic_ordering.py \
	test_fail_src_ctf.py \
	test_query_metadata_info.py \
	test_query_support_info.py \
	test_query_trace_info.py
