# SPDX-FileCopyrightText: 2024 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

SUBDIRS = succeed

EXTRA_DIST = \
	empty-event-record.expect \
	field/conftest.py \
	field/ctf-1.8-pass-fixed-len-uint-32-be.mp \
	field/ctf-1.8-pass-fixed-len-uint-32-le.mp \
	field/ctf-1.8-pass-static-len-array-of-struct.mp \
	field/ctf-1.8-pass-struct-empty.mp \
	field/ctf-1.8-pass-struct.mp \
	field/ctf-1.8-pass-variant.mp \
	metadata-info-crlf-metadata.expect \
	metadata-info-lf-metadata.expect \
	metadata-info-succeed1.expect \
	succeed/trace-2packets-barectf-event-before-packet-ctf1-mip0.expect \
	succeed/trace-2packets-barectf-event-before-packet-ctf1-mip1.expect \
	succeed/trace-2packets-barectf-event-before-packet-ctf2-mip1.expect \
	succeed/trace-2packets-ctf1-mip0.expect \
	succeed/trace-2packets-ctf1-mip1.expect \
	succeed/trace-2packets-ctf2-mip1.expect \
	succeed/trace-array-align-elem.expect \
	succeed/trace-barectf-event-before-packet-ctf1-mip0.expect \
	succeed/trace-barectf-event-before-packet-ctf1-mip1.expect \
	succeed/trace-barectf-event-before-packet-ctf2-mip1.expect \
	succeed/trace-clock-offset-goes-back-in-time.expect \
	succeed/trace-def-clk-freq-ctf1-mip0.expect \
	succeed/trace-def-clk-freq-ctf1-mip1.expect \
	succeed/trace-lttng-crash.expect \
	succeed/trace-lttng-event-after-packet.expect \
	succeed/trace-lttng-tracefile-rotation-ctf1-mip0.expect \
	succeed/trace-lttng-tracefile-rotation-ctf1-mip1.expect \
	succeed/trace-lttng-tracefile-rotation-ctf2-mip1.expect \
	succeed/trace-meta-clk-cls-before-trace-cls.expect \
	succeed/trace-meta-ctx-sequence.expect \
	succeed/trace-session-rotation-ctf1-mip0.expect \
	succeed/trace-session-rotation-ctf1-mip1.expect \
	succeed/trace-session-rotation-ctf2-mip1.expect \
	succeed/trace-simple.expect \
	succeed/trace-smalltrace-mip0.expect \
	succeed/trace-smalltrace-mip1.expect \
	succeed/trace-struct-array-align-elem.expect \
	test_deterministic_ordering.py \
	test_fail_src_ctf.py \
	test_query_metadata_info.py \
	test_query_support_info.py \
	test_query_trace_info.py \
	valid-events-then-invalid-events.expect
