# SPDX-FileCopyrightText: 2025 EfficiOS Inc.
#
# SPDX-License-Identifier: MIT

EXTRA_DIST = \
	base-2.15.json \
	base.json \
	cli-base-2.15.expect \
	cli-base.expect \
	cli-list-sessions-2.15.expect \
	cli-list-sessions.expect \
	cli-multi-domains-2.15.expect \
	cli-multi-domains.expect \
	conftest.py \
	inactivity-discarded-packet.expect \
	inactivity-discarded-packet.json \
	invalid-metadata.json \
	list-sessions-2.15.json \
	list-sessions.json \
	lttng_live_server.py \
	multi-domains-2.15.json \
	multi-domains-inverse-2.15.json \
	multi-domains-inverse.json \
	multi-domains.json \
	new-streams.expect \
	new-streams.json \
	rate-limited.json \
	split-metadata.expect \
	split-metadata.json \
	stored-values.expect \
	stored-values.json \
	test_live.py \
	test_query_live.py
